# reflective-pipewire

./: .gitignore  Cargo.toml  README.md  build.sh  manifest.json
.claude/projects/-home-lind-dev-os-reflective-pipewire/memory/: feedback_icon_style.md  open.md  reference_color_palette.md
propertyInspector/: mute_toggle.html  shared.css  shared.js  volume_button.html  volume_display.html  volume_down.html  volume_knob.html  volume_up.html
src/: main.rs  plugin.rs
src/actions/: mod.rs  mute_toggle.rs  volume_button.rs  volume_display.rs  volume_down.rs  volume_knob.rs  volume_up.rs
src/audio/: devices.rs  mod.rs  monitor.rs
src/render/: icons.rs  mod.rs
